--- a/src/Orion.Launcher/Orion.Launcher.csproj
+++ b/src/Orion.Launcher/Orion.Launcher.csproj
@@ -15,21 +15,26 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Roslynator.Analyzers" Version="2.3.0">
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="Roslynator.Analyzers" Version="4.2.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
-    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
-    <PackageReference Include="Ninject" Version="3.3.4" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
-    <PackageReference Include="System.IO.Packaging" Version="4.7.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+    <PackageReference Include="Ninject" Version="3.3.6" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
+    <PackageReference Include="System.IO.Packaging" Version="7.0.0" />
     <PackageReference Include="OTAPI.Upcoming" Version="3.1.20" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\orion-core\src\Orion.Core\Orion.Core.csproj" />
+    <Reference Include="RailSDK.Net">
+      <HintPath>..\..\..\..\Downloads\RailSDK.Net.dll</HintPath>
+    </Reference>
+    <Reference Include="CsvHelper">
+      <HintPath>..\..\..\..\Downloads\Libraries\CsvHelper\2.0.0.0\CsvHelper.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
@@ -47,4 +52,7 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\orion-core\src\Orion.Core\Orion.Core.csproj" />
+  </ItemGroup>
 </Project>
